Now going to put this into markbot

--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,43 @@ header {
   background-color: #e2e2e2;
 }
 
-.current {
-  color: #fff;
-  background-color: #0074d9;
-}
-
 li {
   color: #0074d9;
+  list-style: none;
+  display: inline-block;
+}
+
+a:hover,
+a:focus,
+.current {
+  background-color: #0074d9;
+  color: #fff;
+}
+
+@media only screen and (min-width: 25em) {
+
+  {
+
+  }
+}
+
+@media only screen and (min-width: 38em) {
+
+  {
+
+  }
+}
+
+@media only screen and (min-width: 60em){
+
+  {
+
+  }
+}
+
+@media only screen and (min-width: 90em) {
+
+    {
+
+    }
 }
